--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1815,3 +1815,47 @@ h1, h2, h3, h4, h5,
 .text-uppercase a:hover{
   color:orange;
 }
+.cart[data-count]:after{
+  position:absolute;
+  right:-30%;
+  top:-10%;
+  content: attr(data-count);
+  font-size:60%;
+  padding:.2em;
+  border-radius:50%;
+  line-height:1em;
+  color: white;
+  background:rgba(255,0,0,.85);
+  text-align:center;
+  min-width: 1em;
+}
+#loginform{
+  display: none;
+  position:fixed;
+  z-index:5000;
+  padding-top: 50px;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  overflow: auto;
+  background-color:rgb(0,0,0);
+  background-color:rgba(0,0,0,0.4);
+}
+#loginform-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+.close{
+  font-size: 30px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
